removed deprecated per Java API changes